2007-09-09  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.137
        
        * Few javascript fixes for improved URL constructor compatibility [ BUG 115 ]
        The generated links in the ajax search dropdown are now compatible with
        the selected URL constructor.
        
        * More IE fixes to improve rendering of floats. ( ref. IE6 peekaboo bug )

        
2007-09-08  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.5.136
        
        * D'oh, due to some debug code left in CookieAuthenticationLoginModule,
        it was expiring sessions in 30 seconds.
        
        * AdminUI now shows all known plugins and whether they are compatible
        with this version of JSPWiki.  WikiWizard also gains an AdminBean
        (though it doesn't do anything).

2007-09-04  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.5.135

        * [Bug 135]: Turned out to be a faulty quote in Finnish translation.
        
        * [Bug 134]: Ditto.

2007-09-03  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.134
        
        * Fixed the JSON-RPC url, to be independent on the url constructor
        
2007-09-02  Juan Pablo Santos (juanpablo.santos@gmail.com)

        * 2.5.133
        
        * [ BUG 133 ]: Release.isOlderOrEqual() was not comparing revisions
        properly and, in the end, Editors were not registering. Something 
        similar was happening with Release.isNewerOrEqual(), fixed as well.
        
        * [ BUG 122 ]: Partly fixed. Preferences for default template are now readed 
        from jspwiki.properties instead of being hardcoded in 
        com.ecyrd.jspwiki.preferences.Preferences. Cfr. with jspwiki.properties.tmpl 
        lines 258 - 261. 
        
        * Updated es_ES locales

2007-09-02  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.132
        
        * Fixed search menu for Smart skin. (improve compat. with IE)
        

2007-09-01  Janne Jalkanen <jalkanen@ecyrd.com>
