@@ -2,8 +2,8 @@ package com.ecyrd.jspwiki.web;
 
 public abstract class CommonContainerTests extends CommonTests
 {
-    public CommonContainerTests( String name, String baseURL )
+    public CommonContainerTests( String name, String uRL )
     {
-        super( name, baseURL );
+        super( name, uRL );
     }
 }
