@@ -4,7 +4,7 @@ public class CustomTest extends CommonCustomTests
 {
     public CustomTest( String s )
     {
-        super( s, "http://localhost:8080/test-custom/" );
+        super( s, "test-custom/" );
     }
 
 }
